After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786986 - text_window_to_widget_coords broken when Container:border-width > 0
text_window_to_widget_coords broken when Container:border-width > 0
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTextView
3.22.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-08-29 17:59 UTC by Daniel Boles
Modified: 2017-08-29 18:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
TextView: :border-width broke window→widget coords (1.18 KB, patch)
2017-08-29 18:04 UTC, Daniel Boles
committed Details | Review

Description Daniel Boles 2017-08-29 17:59:09 UTC
* Run the test case at https://bugzilla.gnome.org/show_bug.cgi?id=759725
* Open the Inspector
* On the Visual tab, turn on Simulate Touchscreen
* Select some text

The handles are drawn too high, and the magnifier shows an area above what you are actually selecting.
Comment 1 Daniel Boles 2017-08-29 18:04:31 UTC
Created attachment 358714 [details] [review]
TextView: :border-width broke window→widget coords

Do the converse of commit bd7c87c762c75bbb8dfb5fed23964651188ef206 so
that a TextView with Container:border-width > 0 does not get its handles
and magnified region shifted up/left from where they should be.
Comment 2 Daniel Boles 2017-08-29 18:09:06 UTC
Attachment 358714 [details] pushed as afd624b - TextView: :border-width broke window→widget coords