TextView: :border-width broke window→widget coords

Do the converse of commit bd7c87c762c75bbb8dfb5fed23964651188ef206 so
that a TextView with Container:border-width > 0 does not get its handles
and magnified region shifted up/left from where they should be.

https://bugzilla.gnome.org/show_bug.cgi?id=786986